apps/uptime-kuma/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: uptime-kuma
    app.kubernetes.io/name: uptime-kuma
  name: uptime-kuma
  namespace: default
spec:
  ports:
    - name: http
      port: 3001
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/instance: uptime-kuma
    app.kubernetes.io/name: uptime-kuma
