apps/uptime-kuma/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: uptime-kuma
  namespace: default
spec:
  entryPoints:
    - websecure
    - web
  routes:
    - match: Host(`uptime-kuma.x.pmcd.io`)
      kind: Rule
      services:
        - name: uptime-kuma
          port: 3001
  tls:
    certResolver: pmcdio
